Suppression du projet "oc-bibliotheque-batch"
Suppression du projet "oc-bibliotheque-batch" et ajout du module "bibliotheque-batch" au projet "oc-bibliotheque-webapplication".

--- a/oc-bibliotheque-webapplication/pom.xml
+++ b/oc-bibliotheque-webapplication/pom.xml
@@ -23,6 +23,7 @@
     <module>bibliotheque-business</module>
     <module>bibliotheque-consumer</module>
     <module>bibliotheque-model</module>
+    <module>bibliotheque-batch</module>
   </modules>
 
   <!-- ===== Informations générales ===== -->
