--- a/oc-bibliotheque-webapplication/bibliotheque-batch/pom.xml
+++ b/oc-bibliotheque-webapplication/bibliotheque-batch/pom.xml
@@ -2,27 +2,47 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <!-- =============================================================== -->
+    <!-- ================== Informations du projet ===================== -->
+    <!-- =============================================================== -->
+
+    <!-- ===== Informations Maven ===== -->
     <parent>
         <artifactId>bibliotheque</artifactId>
-        <groupId>org.batch</groupId>
+        <groupId>org.webapplication</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.batch</groupId>
+    <groupId>org.webapplication</groupId>
     <artifactId>bibliotheque-batch</artifactId>
 
+    <!-- ===== Informations générales ===== -->
     <name>bibliotheque-batch</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
+    <!-- =============================================================== -->
+    <!-- ========================= Properties ========================== -->
+    <!-- =============================================================== -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
 
+    <!-- =============================================================== -->
+    <!-- ========================= Dépendances ========================= -->
+    <!-- =============================================================== -->
     <dependencies>
+        <!-- ===== Modules ===== -->
+        <dependency>
+            <groupId>org.webapplication</groupId>
+            <artifactId>bibliotheque-business</artifactId>
+        </dependency>
+
+        <!-- ===== Bibliothèques tierces ===== -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
