--- a/oc-bibliotheque-webapplication/pom.xml
+++ b/oc-bibliotheque-webapplication/pom.xml
@@ -69,6 +69,50 @@
       </dependency>
 
       <!-- ===== Bibliothèques tierces ===== -->
+
+      <!-- spring-webmvc -->
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>5.0.3.RELEASE</version>
+      </dependency>
+
+      <!-- javax.servlet -->
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>4.0.0</version>
+        <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.thymeleaf</groupId>
+        <artifactId>thymeleaf</artifactId>
+        <version>3.0.9.RELEASE</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring4 -->
+      <dependency>
+        <groupId>org.thymeleaf</groupId>
+        <artifactId>thymeleaf-spring5</artifactId>
+        <version>3.0.9.RELEASE</version>
+      </dependency>
+
+      <!-- tthymeleaf-spring5 -->
+      <dependency>
+        <groupId>org.thymeleaf</groupId>
+        <artifactId>thymeleaf-spring5</artifactId>
+        <version>3.0.9.RELEASE</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/com.github.zhanhb/thymeleaf-layout-dialect -->
+      <dependency>
+        <groupId>com.github.zhanhb</groupId>
+        <artifactId>thymeleaf-layout-dialect</artifactId>
+        <version>2.1.2</version>
+      </dependency>
+
+
+      <!-- junit -->
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
