--- a/oc_bibliotheque_webservice/bibliotheque-business/pom.xml
+++ b/oc_bibliotheque_webservice/bibliotheque-business/pom.xml
@@ -47,6 +47,26 @@
         </dependency>
 
         <!-- ===== Bibliothèques tierces ===== -->
+
+        <!-- ==== Spring context ==== -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+
+        <!-- JSR-250 -->
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+        </dependency>
+
+        <!-- JSR-330 -->
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+        </dependency>
+
+        <!-- ==== junit ==== -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
