--- a/oc_bibliotheque_webservice/bibliotheque-consumer/pom.xml
+++ b/oc_bibliotheque_webservice/bibliotheque-consumer/pom.xml
@@ -45,6 +45,24 @@
 
         <!-- ===== Bibliothèques tierces ===== -->
 
+        <!-- ==== Spring context ==== -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+
+        <!-- ==== JSR-330 ==== -->
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+        </dependency>
+
+        <!-- ==== spring-data-jpa ==== -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+        </dependency>
+
         <!-- JUnit -->
         <dependency>
             <groupId>junit</groupId>
