--- a/oc_bibliotheque_webservice/bibliotheque-webservice/pom.xml
+++ b/oc_bibliotheque_webservice/bibliotheque-webservice/pom.xml
@@ -48,6 +48,26 @@
         </dependency>
 
         <!-- ===== Bibliothèques tierces ===== -->
+
+        <!-- ==== Spring context ==== -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+
+        <!-- ==== JSR-330 ==== -->
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+        </dependency>
+
+        <!-- ==== spring-data-jpa ==== -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+        </dependency>
+
+        <!-- ==== junit ==== -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
