--- a/oc_bibliotheque_webservice/pom.xml
+++ b/oc_bibliotheque_webservice/pom.xml
@@ -67,6 +67,46 @@
       </dependency>
 
       <!-- ===== Bibliothèques tierces ===== -->
+
+      <!-- ==== Spring ==== -->
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-framework-bom</artifactId>
+        <version>4.3.11.RELEASE</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+
+      <!-- JSR-330 -->
+      <dependency>
+        <groupId>javax.inject</groupId>
+        <artifactId>javax.inject</artifactId>
+        <version>1</version>
+      </dependency>
+
+      <!-- ==== spring-data-jpa ==== -->
+      <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-jpa</artifactId>
+        <version>1.6.0.RELEASE</version>
+      </dependency>
+
+      <!-- mysql -->
+      <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>5.1.9</version>
+      </dependency>
+
+      <!-- ==== postgresql ==== -->
+      <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>9.4.1212</version>
+        <scope>runtime</scope>
+      </dependency>
+
+      <!-- ==== junit ==== -->
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
@@ -74,6 +114,7 @@
         <scope>test</scope>
       </dependency>
     </dependencies>
+
   </dependencyManagement>
 
   <build>
