--- a/oc-bibliotheque-webapplication/bibliotheque-webapp/pom.xml
+++ b/oc-bibliotheque-webapplication/bibliotheque-webapp/pom.xml
@@ -49,48 +49,51 @@
 
         <!-- ===== Bibliothèques tierces ===== -->
 
+        <!-- ==== slf4j-simple ==== -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>1.6.4</version>
         </dependency>
 
-        <!-- spring-webmvc -->
+        <!-- ==== spring-webmvc ==== -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
         </dependency>
 
-        <!-- javax.servlet -->
+        <!-- ==== javax.servlet ==== -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
 
+        <!-- ==== thymeleaf ==== -->
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf</artifactId>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring4 -->
+
+        <!-- ==== https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring4 ==== -->
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring5</artifactId>
         </dependency>
 
-        <!-- thymeleaf-spring5 -->
+        <!-- ==== thymeleaf-spring5 ==== -->
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring5</artifactId>
         </dependency>
 
-        <!-- thymeleaf-layout -->
+        <!-- ==== thymeleaf-layout ==== -->
         <dependency>
             <groupId>com.github.zhanhb</groupId>
             <artifactId>thymeleaf-layout-dialect</artifactId>
         </dependency>
 
-        <!-- junit -->
+        <!-- ==== junit ==== -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
