--- a/oc-bibliotheque-webapplication/pom.xml
+++ b/oc-bibliotheque-webapplication/pom.xml
@@ -70,14 +70,14 @@
 
       <!-- ===== Bibliothèques tierces ===== -->
 
-      <!-- spring-webmvc -->
+      <!-- ==== spring-webmvc ==== -->
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
         <version>5.0.3.RELEASE</version>
       </dependency>
 
-      <!-- javax.servlet -->
+      <!-- ==== javax.servlet ==== -->
       <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
@@ -85,11 +85,13 @@
         <scope>provided</scope>
       </dependency>
 
+      <!-- ==== thymeleaf ==== -->
       <dependency>
         <groupId>org.thymeleaf</groupId>
         <artifactId>thymeleaf</artifactId>
         <version>3.0.9.RELEASE</version>
       </dependency>
+
       <!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring4 -->
       <dependency>
         <groupId>org.thymeleaf</groupId>
@@ -97,22 +99,21 @@
         <version>3.0.9.RELEASE</version>
       </dependency>
 
-      <!-- tthymeleaf-spring5 -->
+      <!-- ==== thymeleaf-spring5 ==== -->
       <dependency>
         <groupId>org.thymeleaf</groupId>
         <artifactId>thymeleaf-spring5</artifactId>
         <version>3.0.9.RELEASE</version>
       </dependency>
 
-      <!-- https://mvnrepository.com/artifact/com.github.zhanhb/thymeleaf-layout-dialect -->
+      <!-- ==== https://mvnrepository.com/artifact/com.github.zhanhb/thymeleaf-layout-dialect ==== -->
       <dependency>
         <groupId>com.github.zhanhb</groupId>
         <artifactId>thymeleaf-layout-dialect</artifactId>
         <version>2.1.2</version>
       </dependency>
 
-
-      <!-- junit -->
+      <!-- ==== junit ==== -->
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
@@ -122,7 +123,6 @@
 
     </dependencies>
   </dependencyManagement>
-
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
