--- a/oc_bibliotheque_webservice/bibliotheque-model/pom.xml
+++ b/oc_bibliotheque_webservice/bibliotheque-model/pom.xml
@@ -36,6 +36,20 @@
     <!-- ========================= Dépendances ========================= -->
     <!-- =============================================================== -->
     <dependencies>
+
+        <!-- ==== spring-data-jpa ==== -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+        </dependency>
+
+        <!-- ==== persistence-api ==== -->
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+        </dependency>
+
+        <!-- ==== junit ==== -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
