--- a/oc-bibliotheque-webapplication/bibliotheque-entity/pom.xml
+++ b/oc-bibliotheque-webapplication/bibliotheque-entity/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>spring-ws-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
     </dependencies>
 
     <!-- =============================================================== -->
