--- a/oc-bibliotheque-webapplication/bibliotheque-webapp/pom.xml
+++ b/oc-bibliotheque-webapplication/bibliotheque-webapp/pom.xml
@@ -57,10 +57,18 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- ==== https://mvnrepository.com/artifact/org.projectlombok/lombok ==== -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+
+        <!-- ==== https://mvnrepository.com/artifact/ch.qos.logback/logback-classic ==== -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
         </dependency>
 
         <dependency>
